Added new pages

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <body>
     <div class="container">
       <div>
-        <h1 class="header_text">Do you wanna go out with me?</h1>
+        <h1 class="header_text">Will you be my valentine?</h1>
       </div>
       <div class="gif_container">
-        <img
-          src="https://i.pinimg.com/originals/db/9a/31/db9a31068e5698b3affca6fed8b9b670.gif"
-          alt="cute gif"
-        />
+        <div class="tenor-gif-embed" data-postid="13441992" data-share-method="host" data-aspect-ratio="1.43231" data-width="100%">
+            <a href="https://tenor.com/view/happy-valentines-day-my-love-anime-girl-gift-gif-13441992"></a>
+        </div>
+        <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
       </div>
       <div class="buttons">
         <button class="btn" id="yesButton" onclick="nextPage()">Yes</button>
@@ -26,7 +26,7 @@
         </button>
         <script>
           function nextPage() {
-            window.location.href = "finally.html";
+            window.location.href = "/valentines-day/idea.html";
           }
 
           function moveButton() {
